--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>🪴Leaf It to Me!</title>
+        <link rel="stylesheet" href="index.css" />
+        <script src="./js/data.js"></script>
     </head>
     <body></body>
 </html>
