add fontawesome icons + header html structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>🪴Leaf It to Me!</title>
         <link rel="stylesheet" href="index.css" />
+
         <script src="./js/data.js"></script>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1><i class="fa-solid fa-seedling"></i>Leaf It to Me!</h1>
+            <nav>
+                <ul>
+                    <li>Incio</li>
+                    <li>Plantas</li>
+                    <li>Blog</li>
+                    <li>Contacto</li>
+                </ul>
+            </nav>
+            <ul>
+                <li><i class="fa-solid fa-envelope"></i></li>
+                <li><i class="fa-solid fa-phone"></i></li>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
+                <li><i class="fa-solid fa-user"></i></li>
+            </ul>
+        </header>
+        <main></main>
+        <footer></footer>
+    </body>
 </html>
