--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
     </head>
     <body>
         <header>
-            <h1><i class="fa-solid fa-seedling"></i>Leaf It to Me!</h1>
-            <nav>
+            <div class="header-wrapper">
+                <h1>
+                    <i class="fa-solid fa-seedling"></i
+                    ><span> Leaf It To Me! </span>
+                </h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Incio</a></li>
+                        <li><a href="#">Plantas</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#"> Contacto </a></li>
+                    </ul>
+                </nav>
                 <ul>
-                    <li>Incio</li>
-                    <li>Plantas</li>
-                    <li>Blog</li>
-                    <li>Contacto</li>
+                    <li><i class="fa-solid fa-envelope"></i></li>
+                    <li><i class="fa-solid fa-phone"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li><i class="fa-solid fa-user"></i></li>
                 </ul>
-            </nav>
-            <ul>
-                <li><i class="fa-solid fa-envelope"></i></li>
-                <li><i class="fa-solid fa-phone"></i></li>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
-                <li><i class="fa-solid fa-user"></i></li>
-            </ul>
+            </div>
         </header>
         <main></main>
         <footer></footer>
