add main section css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>🪴Leaf It to Me!</title>
+        <title>🪴 Leaf It to Me!</title>
         <link rel="stylesheet" href="index.css" />
 
         <script src="./js/data.js"></script>
@@ -31,7 +31,36 @@
                 </ul>
             </div>
         </header>
-        <main></main>
+        <main>
+            <!---
+        id: 1,
+        name: "Aloe Vera",
+        img: "./assets/img/aloe_vera.jpg",
+        description: "Planta suculenta conocida por sus propiedades curativas.",
+        price: 150,
+        stock: 20,
+        --->
+            <section>
+                <div>
+                    <figure>
+                        <img
+                            src="./assets/img/aloe_vera.jpg"
+                            alt="Aloe Vera Imagen"
+                        />
+                        <figurecaption>Aloe Vera</figurecaption>
+                    </figure>
+                    <div>
+                        <p>
+                            Planta suculenta conocida por sus propiedades
+                            curativas.
+                        </p>
+                        <p class="price">Precio: &euro;150</p>
+                    </div>
+                    <button>Agregar al carrito</button>
+                </div>
+            </section>
+        </main>
         <footer></footer>
+        <script src="./js/event.js"></script>
     </body>
 </html>
