--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </p>
                         <p class="price">Precio: &euro;150</p>
                     </div>
-                    <button>Agregar al carrito</button>
+                    <button><span> Agregar al carrito </span></button>
                 </div>
             </section>
         </main>
