fix growth effect unintended behaviour + semantic html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         stock: 20,
         --->
             <section>
-                <div>
+                <article>
                     <figure>
                         <img
                             src="./assets/img/aloe_vera.jpg"
@@ -57,7 +57,7 @@
                         <p class="price">Precio: &euro;150</p>
                     </div>
                     <button><span> Agregar al carrito </span></button>
-                </div>
+                </article>
             </section>
         </main>
         <footer></footer>
