minor css update on main.css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,75 @@
                             Planta suculenta conocida por sus propiedades
                             curativas.
                         </p>
-                        <p class="price">Precio: &euro;150</p>
+                        <p>Precio: &euro;150</p>
+                    </div>
+                    <button><span> Agregar al carrito </span></button>
+                </article>
+                <article>
+                    <figure>
+                        <img
+                            src="./assets/img/aloe_vera.jpg"
+                            alt="Aloe Vera Imagen"
+                        />
+                        <figurecaption>Aloe Vera</figurecaption>
+                    </figure>
+                    <div>
+                        <p>
+                            Planta suculenta conocida por sus propiedades
+                            curativas.
+                        </p>
+                        <p>Precio: &euro;150</p>
+                    </div>
+                    <button><span> Agregar al carrito </span></button>
+                </article>
+                <article>
+                    <figure>
+                        <img
+                            src="./assets/img/aloe_vera.jpg"
+                            alt="Aloe Vera Imagen"
+                        />
+                        <figurecaption>Aloe Vera</figurecaption>
+                    </figure>
+                    <div>
+                        <p>
+                            Planta suculenta conocida por sus propiedades
+                            curativas.
+                        </p>
+                        <p>Precio: &euro;150</p>
+                    </div>
+                    <button><span> Agregar al carrito </span></button>
+                </article>
+                <article>
+                    <figure>
+                        <img
+                            src="./assets/img/aloe_vera.jpg"
+                            alt="Aloe Vera Imagen"
+                        />
+                        <figurecaption>Aloe Vera</figurecaption>
+                    </figure>
+                    <div>
+                        <p>
+                            Planta suculenta conocida por sus propiedades
+                            curativas.
+                        </p>
+                        <p>Precio: &euro;150</p>
+                    </div>
+                    <button><span> Agregar al carrito </span></button>
+                </article>
+                <article>
+                    <figure>
+                        <img
+                            src="./assets/img/aloe_vera.jpg"
+                            alt="Aloe Vera Imagen"
+                        />
+                        <figurecaption>Aloe Vera</figurecaption>
+                    </figure>
+                    <div>
+                        <p>
+                            Planta suculenta conocida por sus propiedades
+                            curativas.
+                        </p>
+                        <p>Precio: &euro;150</p>
                     </div>
                     <button><span> Agregar al carrito </span></button>
                 </article>
