--- a/index.html
+++ b/index.html
@@ -32,101 +32,7 @@
             </div>
         </header>
         <main>
-            <!---
-        id: 1,
-        name: "Aloe Vera",
-        img: "./assets/img/aloe_vera.jpg",
-        description: "Planta suculenta conocida por sus propiedades curativas.",
-        price: 150,
-        stock: 20,
-        --->
-            <section>
-                <article>
-                    <figure>
-                        <img
-                            src="./assets/img/aloe_vera.jpg"
-                            alt="Aloe Vera Imagen"
-                        />
-                        <figurecaption>Aloe Vera</figurecaption>
-                    </figure>
-                    <div>
-                        <p>
-                            Planta suculenta conocida por sus propiedades
-                            curativas.
-                        </p>
-                        <p>Precio: &euro;150</p>
-                    </div>
-                    <button><span> Agregar al carrito </span></button>
-                </article>
-                <article>
-                    <figure>
-                        <img
-                            src="./assets/img/aloe_vera.jpg"
-                            alt="Aloe Vera Imagen"
-                        />
-                        <figurecaption>Aloe Vera</figurecaption>
-                    </figure>
-                    <div>
-                        <p>
-                            Planta suculenta conocida por sus propiedades
-                            curativas.
-                        </p>
-                        <p>Precio: &euro;150</p>
-                    </div>
-                    <button><span> Agregar al carrito </span></button>
-                </article>
-                <article>
-                    <figure>
-                        <img
-                            src="./assets/img/aloe_vera.jpg"
-                            alt="Aloe Vera Imagen"
-                        />
-                        <figurecaption>Aloe Vera</figurecaption>
-                    </figure>
-                    <div>
-                        <p>
-                            Planta suculenta conocida por sus propiedades
-                            curativas.
-                        </p>
-                        <p>Precio: &euro;150</p>
-                    </div>
-                    <button><span> Agregar al carrito </span></button>
-                </article>
-                <article>
-                    <figure>
-                        <img
-                            src="./assets/img/aloe_vera.jpg"
-                            alt="Aloe Vera Imagen"
-                        />
-                        <figurecaption>Aloe Vera</figurecaption>
-                    </figure>
-                    <div>
-                        <p>
-                            Planta suculenta conocida por sus propiedades
-                            curativas.
-                        </p>
-                        <p>Precio: &euro;150</p>
-                    </div>
-                    <button><span> Agregar al carrito </span></button>
-                </article>
-                <article>
-                    <figure>
-                        <img
-                            src="./assets/img/aloe_vera.jpg"
-                            alt="Aloe Vera Imagen"
-                        />
-                        <figurecaption>Aloe Vera</figurecaption>
-                    </figure>
-                    <div>
-                        <p>
-                            Planta suculenta conocida por sus propiedades
-                            curativas.
-                        </p>
-                        <p>Precio: &euro;150</p>
-                    </div>
-                    <button><span> Agregar al carrito </span></button>
-                </article>
-            </section>
+            <section></section>
         </main>
         <footer></footer>
         <script src="./js/event.js"></script>
