add shoppingCart html structure

--- a/index.html
+++ b/index.html
@@ -32,6 +32,34 @@
             </div>
         </header>
         <main>
+            <div class="shopping-cart">
+                <h1>Carrito de compras</h1>
+                <ul>
+                    <li>
+                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span
+                        ><button>Eliminar</button>
+                        <button>+</button>
+                        <button>-</button>
+                    </li>
+                    <li>
+                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span
+                        ><button>Eliminar</button>
+                        <button>+</button>
+                        <button>-</button>
+                    </li>
+                    <li>
+                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span
+                        ><button>Eliminar</button>
+                        <button>+</button>
+                        <button>-</button>
+                    </li>
+                </ul>
+                <p>Total: &euro; <span>450</span></p>
+                <div>
+                    <button>Vaciar Carrito</button>
+                    <button>Proceder a Comprar</button>
+                </div>
+            </div>
             <section></section>
         </main>
         <footer></footer>
