add shoppingCart css styles

--- a/index.html
+++ b/index.html
@@ -33,25 +33,31 @@
         </header>
         <main>
             <div class="shopping-cart">
-                <h1>Carrito de compras</h1>
+                <h1>Carrito de Compras</h1>
                 <ul>
                     <li>
-                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span
-                        ><button>Eliminar</button>
-                        <button>+</button>
-                        <button>-</button>
+                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span>
+                        <div>
+                            <button>Eliminar</button>
+                            <button>+</button>
+                            <button>-</button>
+                        </div>
                     </li>
                     <li>
-                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span
-                        ><button>Eliminar</button>
-                        <button>+</button>
-                        <button>-</button>
+                        <span>Aloe Vera - &euro; 150 x 1</span>
+                        <div>
+                            <button>Eliminar</button>
+                            <button>+</button>
+                            <button>-</button>
+                        </div>
                     </li>
                     <li>
-                        <span>Orquídea Phalaenopsis - &euro; 150 x 1</span
-                        ><button>Eliminar</button>
-                        <button>+</button>
-                        <button>-</button>
+                        <span>Lavanda - &euro; 150 x 1</span>
+                        <div>
+                            <button>Eliminar</button>
+                            <button>+</button>
+                            <button>-</button>
+                        </div>
                     </li>
                 </ul>
                 <p>Total: &euro; <span>450</span></p>
