--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <ul>
                     <li><i class="fa-solid fa-envelope"></i></li>
                     <li><i class="fa-solid fa-phone"></i></li>
-                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li id="cart-icon">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </li>
                     <li><i class="fa-solid fa-user"></i></li>
                 </ul>
             </div>
@@ -35,32 +37,16 @@
             <div class="shopping-cart">
                 <h1>Carrito de Compras</h1>
                 <ul>
-                    <li>
+                    <!-- <li>
                         <span>Orquídea Phalaenopsis - &euro; 150 x 1</span>
                         <div>
                             <button>Eliminar</button>
                             <button>+</button>
                             <button>-</button>
                         </div>
-                    </li>
-                    <li>
-                        <span>Aloe Vera - &euro; 150 x 1</span>
-                        <div>
-                            <button>Eliminar</button>
-                            <button>+</button>
-                            <button>-</button>
-                        </div>
-                    </li>
-                    <li>
-                        <span>Lavanda - &euro; 150 x 1</span>
-                        <div>
-                            <button>Eliminar</button>
-                            <button>+</button>
-                            <button>-</button>
-                        </div>
-                    </li>
+                    </li> -->
                 </ul>
-                <p>Total: &euro; <span>450</span></p>
+                <p>Total: &euro; <span>0</span></p>
                 <div>
                     <button>Vaciar Carrito</button>
                     <button>Proceder a Comprar</button>
