add footer with css styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
             </div>
             <section></section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-wrapper">
+                <p>Copyright &copy; 2024 Leaf It to Me!</p>
+            </div>
+        </footer>
         <script src="./js/event.js"></script>
     </body>
 </html>
