--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
                     <button>Proceder a Comprar</button>
                 </div>
             </div>
+            <nav class="paginas-nav">
+                <button><i class="fa-solid fa-angles-left"></i></button>
+                <ul>
+                    <li><button>1</button></li>
+                    <li><button>2</button></li>
+                    <li><button>3</button></li>
+                    <li><button>4</button></li>
+                </ul>
+                <button><i class="fa-solid fa-angles-right"></i></button>
+            </nav>
             <section></section>
         </main>
         <footer>
