add css styles for pagination html

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <nav class="paginas-nav">
                 <button><i class="fa-solid fa-angles-left"></i></button>
                 <ul>
-                    <li><button>1</button></li>
-                    <li><button>2</button></li>
-                    <li><button>3</button></li>
-                    <li><button>4</button></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
                 </ul>
                 <button><i class="fa-solid fa-angles-right"></i></button>
             </nav>
