implement pagination functionality

--- a/index.html
+++ b/index.html
@@ -42,16 +42,7 @@
                     <button>Proceder a Comprar</button>
                 </div>
             </div>
-            <nav class="paginas-nav">
-                <button><i class="fa-solid fa-angles-left"></i></button>
-                <ul>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                </ul>
-                <button><i class="fa-solid fa-angles-right"></i></button>
-            </nav>
+            <nav class="paginas-nav"></nav>
             <section></section>
         </main>
         <footer>
