add search bar html structure + css styles

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                     <button>Proceder a Comprar</button>
                 </div>
             </div>
+            <header>
+                <h1>Tomate tu tiempo para buscar tu planta</h1>
+                <p>o</p>
+                <h2>Escribe abajo la planta que buscas:</h2>
+                <nav class="search">
+                    <input type="text" placeholder="Aloe, Peperomia, etc" />
+                </nav>
+            </header>
             <nav class="paginas-nav"></nav>
             <section></section>
         </main>
