--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>🪴 Leaf It to Me!</title>
         <link rel="stylesheet" href="index.css" />
         <script src="./js/data.js"></script>
+        <script src="./js/cartFunctions.js"></script>
+        <script src="./js/paginationFunctions.js"></script>
+        <script src="./js/plantFunctions.js"></script>
     </head>
     <body>
         <header>
@@ -58,6 +61,6 @@
                 <p>Copyright &copy; 2024 Leaf It to Me!</p>
             </div>
         </footer>
-        <script src="./js/event.js"></script>
+        <script src="./js/events.js"></script>
     </body>
 </html>
